[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ui/menus/local-connection/ConnectionTest.gd" type="Script" id=1]

[node name="LocalConnection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connection" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -401.699
margin_top = -111.582
margin_right = -0.698853
margin_bottom = 12.4184
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Connection"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -35.0
margin_right = 148.5
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Connection/VBoxContainer"]
margin_right = 297.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEditPseudo" type="LineEdit" parent="Connection/VBoxContainer/GridContainer"]
margin_right = 146.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Pseudonyme"

[node name="ButtonHost" type="Button" parent="Connection/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_right = 296.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "HÃ©berger une partie"

[node name="LineEditAddress" type="LineEdit" parent="Connection/VBoxContainer/GridContainer"]
margin_top = 28.0
margin_right = 146.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "127.0.0.1"
placeholder_text = "Adresse IP"

[node name="ButtonJoin" type="Button" parent="Connection/VBoxContainer/GridContainer"]
margin_left = 150.0
margin_top = 28.0
margin_right = 296.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Rejoindre une partie"

[node name="ButtonHostOnly" type="Button" parent="Connection/VBoxContainer/GridContainer"]
margin_top = 56.0
margin_right = 146.0
margin_bottom = 76.0
text = "Serveur uniquement"

[node name="LabelError" type="Label" parent="Connection/VBoxContainer"]
margin_top = 80.0
margin_right = 297.0
margin_bottom = 94.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitingRoom" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -244.649
margin_top = -286.199
margin_right = 21.3506
margin_bottom = -6.19907
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="WaitingRoom"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WaitingRoom/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 245.0
margin_bottom = 259.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="WaitingRoom/MarginContainer/VBoxContainer"]
margin_right = 225.0
margin_bottom = 14.0
text = "Liste d'attente"

[node name="PlayersList" type="ItemList" parent="WaitingRoom/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 225.0
margin_bottom = 197.0
size_flags_vertical = 3

[node name="IPAddress" type="Label" parent="WaitingRoom/MarginContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 225.0
margin_bottom = 215.0
text = "Adresse IP : "

[node name="HBoxContainer" type="HBoxContainer" parent="WaitingRoom/MarginContainer/VBoxContainer"]
margin_top = 219.0
margin_right = 225.0
margin_bottom = 239.0

[node name="ButtonBack" type="Button" parent="WaitingRoom/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 110.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Retour"

[node name="ButtonStart" type="Button" parent="WaitingRoom/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 114.0
margin_right = 225.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "START"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -181.052
margin_top = -73.0972
margin_right = -86.0515
margin_bottom = -15.0972
rect_scale = Vector2( 3.7533, 3.7533 )
window_title = "Alerte !"

[connection signal="pressed" from="Connection/VBoxContainer/GridContainer/ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="Connection/VBoxContainer/GridContainer/ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
[connection signal="pressed" from="Connection/VBoxContainer/GridContainer/ButtonHostOnly" to="." method="_on_ButtonHostOnly_pressed"]
[connection signal="pressed" from="WaitingRoom/MarginContainer/VBoxContainer/HBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="WaitingRoom/MarginContainer/VBoxContainer/HBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
